# socketlib

./: CMakeLists.txt  LICENSE  README.md
include/socketlib/: ClientSocket.hpp  ServerSocket.hpp  SocketAddress.hpp
src/socketlib/: ClientSocket.cpp  ServerSocket.cpp  SocketAddress.cpp
tests/: CMakeLists.txt
tests/src/: SocketAddress_test.cpp
